# ocvp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build.yml
apps/: CMakeLists.txt
apps/drawcontour/: CMakeLists.txt  main.cpp
apps/drawframe/: CMakeLists.txt  main.cpp
apps/qtgui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
apps/qtgui/utils/: cutecv.h
apps/qtgui/widgets/: cameraintrinsicsgroupbox.cpp  cameraintrinsicsgroupbox.h  controlpointsgroupbox.cpp  controlpointsgroupbox.h  distortioncoefficientsgroupbox.cpp  distortioncoefficientsgroupbox.h  drawingsurface.cpp  drawingsurface.h  pnpresultwidget.cpp  pnpresultwidget.h
apps/solvepnp/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/ocvp/: camera.h  cli.h  contour.h  defs.h  drawframe.h  image.h  pnp.h
lib/src/: camera.cpp  contour.cpp  drawframe.cpp  image.cpp  pnp.cpp
