cmake_minimum_required(VERSION 3.9)
project(ocv-playground)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

##################################################################
####### OpenCV
##################################################################

find_package(OpenCV REQUIRED core imgcodecs imgproc calib3d)

##################################################################
####### lib
##################################################################

add_subdirectory(lib)

##################################################################
####### apps
##################################################################

add_subdirectory(apps)

##################################################################
####### Tests
##################################################################

#add_subdirectory(tests)
